Terraform_projects/terraform_vpc_peering/ohio_sg.tf
resource "aws_security_group" "ohio_sg" {
  name        = "ohio_sg"
  description = "Allow TLS inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.ohio_vpc.id
  provider = aws.ohio

  tags = {
    Name = "ohio_sg"
  }
}

resource "aws_vpc_security_group_ingress_rule" "ssh" {
  provider = aws.ohio
  security_group_id = aws_security_group.ohio_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}
resource "aws_vpc_security_group_ingress_rule" "http" {
  provider = aws.ohio
  security_group_id = aws_security_group.ohio_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  provider = aws.ohio
  security_group_id = aws_security_group.ohio_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
